[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Characters/blacksmith_giant.png" type="Texture" id=1]
[ext_resource path="res://Scripts/scrollText.gd" type="Script" id=2]
[ext_resource path="res://Assets/Icons/manaPotion.png" type="Texture" id=3]
[ext_resource path="res://Assets/Icons/leatherHelmet.png" type="Texture" id=4]
[ext_resource path="res://Assets/Icons/leatherBoots.png" type="Texture" id=5]
[ext_resource path="res://Assets/Icons/leatherPants.png" type="Texture" id=6]
[ext_resource path="res://Assets/Icons/healthPot.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/leatherChestplate.png" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/returnArrow.png" type="Texture" id=9]
[ext_resource path="res://Scripts/returnButton.gd" type="Script" id=10]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.990654, 1 )
colors = PoolColorArray( 0.67451, 0.67451, 0.67451, 1, 0.67451, 0.67451, 0.67451, 1, 0.67451, 0.67451, 0.67451, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 10

[node name="Node2D" type="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="blacksmith_giant" type="Sprite" parent="."]
position = Vector2( 47, 32 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="shopBackground" type="Sprite" parent="."]
position = Vector2( 45, 119.5 )
scale = Vector2( 9.2, 81 )
texture = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Container" type="Container" parent="."]
margin_left = 2.0
margin_top = 81.0
margin_right = 88.0
margin_bottom = 158.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthPotion" type="Sprite" parent="Container"]
position = Vector2( 11, 14 )
texture = ExtResource( 7 )

[node name="healthPotCostLabel" type="Label" parent="Container"]
anchor_top = 0.38
anchor_bottom = 0.391
text = "25G"
valign = 1

[node name="manaPotion" type="Sprite" parent="Container"]
position = Vector2( 41, 14 )
texture = ExtResource( 3 )

[node name="manaPotCostLabel" type="Label" parent="Container"]
anchor_left = 0.362
anchor_top = 0.38
anchor_right = 0.377
anchor_bottom = 0.391
margin_top = -1.90735e-06
margin_right = 25.0
margin_bottom = 10.197
text = "25G"
valign = 1

[node name="helmet" type="Sprite" parent="Container"]
position = Vector2( 72, 14 )
texture = ExtResource( 4 )

[node name="helmetCostLabel" type="Label" parent="Container"]
anchor_left = 0.71
anchor_top = 0.38
anchor_right = 0.754
anchor_bottom = 0.391
margin_top = -1.90735e-06
margin_right = 25.0
margin_bottom = 10.197
text = "40G"
valign = 1

[node name="chestplate" type="Sprite" parent="Container"]
position = Vector2( 11, 54 )
texture = ExtResource( 8 )

[node name="chestplateCostLabel" type="Label" parent="Container"]
anchor_top = 0.77
anchor_bottom = 1.0
margin_top = -1.90735e-06
margin_right = 25.0
margin_bottom = 10.197
text = "180G"
valign = 1

[node name="pants" type="Sprite" parent="Container"]
position = Vector2( 42, 54 )
texture = ExtResource( 6 )

[node name="pantsCostLabel" type="Label" parent="Container"]
anchor_left = 0.377
anchor_top = 0.871
anchor_right = 0.377
anchor_bottom = 0.871
margin_top = -1.90735e-06
margin_right = 25.0
margin_bottom = 10.714
text = "25G"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boots" type="Sprite" parent="Container"]
position = Vector2( 72, 53 )
texture = ExtResource( 5 )

[node name="bootsCostLabel" type="Label" parent="Container"]
anchor_left = 0.725
anchor_top = 0.856
anchor_right = 0.884
anchor_bottom = 0.9
margin_top = -1.90735e-06
margin_right = 25.0
margin_bottom = 10.197
text = "25G"
valign = 1

[node name="Sprite5" type="Sprite" parent="Container"]

[node name="welcomeText" type="Label" parent="."]
margin_left = 4.0
margin_top = 66.0
margin_right = 87.0
margin_bottom = 158.0
focus_mode = 1
align = 1
autowrap = true
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="shopLeftSelect" type="Button" parent="."]
margin_left = -1.0
margin_top = 62.0
margin_right = 18.0
margin_bottom = 79.0
focus_mode = 0
enabled_focus_mode = 0
text = "<"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shopRightSelect" type="Button" parent="."]
margin_left = 71.0
margin_top = 62.0
margin_right = 90.0
margin_bottom = 79.0
focus_mode = 0
enabled_focus_mode = 0
text = ">"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="returnButton" type="Button" parent="."]
margin_right = 19.0
margin_bottom = 15.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 9 )
flat = true
expand_icon = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skipTextButton" type="Button" parent="."]
margin_top = 64.0
margin_right = 88.0
margin_bottom = 160.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="welcomeText" to="welcomeText" method="_on_welcomeText_focus_entered"]
[connection signal="pressed" from="returnButton" to="returnButton" method="_on_returnButton_pressed"]
[connection signal="pressed" from="skipTextButton" to="welcomeText" method="_on_Button_pressed"]
[connection signal="pressed" from="skipTextButton" to="welcomeText" method="_on_skipTextButton_pressed"]
